@@ -11,6 +11,11 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-13-23
+2016-6-13  David Schneider
+- extend method_domain feature to get domain from method to support
+  Partition::ConfigV2 - JIRA PSAS-241
+
 Tag: V00-13-22
 2016-4-14 David Schneider
 - extend method_domain feature to get domain from attribute to support
